# python_microsoft_copilot

./: README.md  pyproject.toml
python_microsoft_copilot/: MicrosoftのCopilotを利用する方法検討.ipynb
python_microsoft_copilot/.ipynb_checkpoints/: MicrosoftのCopilotを利用する方法検討-checkpoint.ipynb
