[tool.poetry]
name = "python-microsoft-copilot"
version = "0.1.0"
description = ""
authors = ["Naito Hiroaki <naitoh0414@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
jupyterlab = "^4.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
